--- a/anchor-escrow/package.json
+++ b/anchor-escrow/package.json
@@ -4,8 +4,8 @@
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
-        "@project-serum/anchor": "^0.24.2",
-        "@solana/spl-token": "^0.3.4"
+        "@project-serum/anchor": "0.22.0",
+        "@solana/spl-token": "0.1.8"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
